// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkSwitch should disable theming if the required attribute is omitted 1`] = `
<RCTSwitch
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(0, 178, 214)"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      undefined,
    ]
  }
  thumbTintColor={null}
  tintColor="rgb(230, 228, 235)"
  value={true}
/>
`;

exports[`iOS BpkSwitch should render correctly 1`] = `
<RCTSwitch
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(0, 178, 214)"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      undefined,
    ]
  }
  thumbTintColor={null}
  tintColor="rgb(230, 228, 235)"
  value={false}
/>
`;

exports[`iOS BpkSwitch should support the "value" prop 1`] = `
<RCTSwitch
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(0, 178, 214)"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      undefined,
    ]
  }
  thumbTintColor={null}
  tintColor="rgb(230, 228, 235)"
  value={true}
/>
`;

exports[`iOS BpkSwitch should support theming 1`] = `
<RCTSwitch
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="red"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      undefined,
    ]
  }
  thumbTintColor={null}
  tintColor="rgb(230, 228, 235)"
  value={true}
/>
`;
